# lands_of_mana

./: .gitignore  .gitmodules  ATTRIBUTION.md  COPYING.md  Cargo.toml  README.md  TODO.md
devlogs/: 2022-06-14.md  2022-06-19 - ninepatch in egui.md
maps/: world_of_magic_export.tmx
src/: assets.rs  camera.rs  config.rs  lib.rs  main.rs  prelude.rs  state.rs
src/game/: actions.rs  load_map.rs  map.rs  mod.rs  province.rs  units.rs  world.rs  world_gen.rs
src/gui/: bindings.rs  camera.rs  gui_context.rs  mod.rs
src/gui/plugins/: cursor.rs  debug_tooltip.rs  mod.rs  resource_bar.rs  selected_window.rs  time_bar.rs  title_bar.rs  unit_badge.rs
src/gui/systems/: mod.rs
src/gui/widgets/: buttons.rs  icon_button.rs  mod.rs  nine_patch.rs  window.rs
src/input/: mod.rs
src/old_gui/: app.rs  camera.rs
src/old_gui/topbar/: mod.rs  resources.rs
src/render/: animations.rs  mod.rs  selection.rs  z_level.rs
src/render/tilemap/: layers.rs  mod.rs  tile_selection.rs
src/render/units/: mod.rs
src/tilemap/: mod.rs  tile_selection.rs
src/ui/: camera.rs  input.rs  mod.rs  selection.rs  viewer.rs
src/ui/gui/: app.rs  bindings.rs  mod.rs
src/ui/gui/topbar/: mod.rs  resources.rs  toolbar.rs
